@@ -17,7 +17,6 @@ package com.github.benmanes.caffeine.cache.simulator.parser;
 
 import static java.util.Locale.US;
 import static org.apache.commons.lang3.StringUtils.substringBefore;
-
 import java.io.BufferedOutputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -26,13 +25,10 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-
 import org.apache.commons.lang3.function.Failable;
 import org.apache.commons.lang3.mutable.MutableInt;
-
 import com.google.common.base.CaseFormat;
 import com.google.common.base.Stopwatch;
-
 import picocli.CommandLine;
 import picocli.CommandLine.Command;
 import picocli.CommandLine.Help;
@@ -52,63 +48,44 @@ import picocli.CommandLine.Option;
  *
  * @author ben.manes@gmail.com (Ben Manes)
  */
-@SuppressWarnings({"NotNullFieldNotInitialized", "unused"})
+@SuppressWarnings({ "NotNullFieldNotInitialized", "unused" })
 @Command(mixinStandardHelpOptions = true)
 public final class Rewriter implements Runnable {
-  @Option(names = "--inputFiles", required = true, split = ",", description = "The trace input "
-      + "files. To use a mix of formats, specify the entry as format:path, e.g. lirs:loop.trace.gz")
-  private List<String> inputFiles;
-  @Option(names = "--inputFormat", required = true, description = "The default trace input format")
-  private TraceFormat inputFormat;
 
-  @Option(names = "--outputFile", required = true, description = "The trace output file")
-  private Path outputFile;
-  @Option(names = "--outputFormat", required = true, description = "The trace output format")
-  private OutputFormat outputFormat;
+    @Option(names = "--inputFiles", required = true, split = ",", description = "The trace input " + "files. To use a mix of formats, specify the entry as format:path, e.g. lirs:loop.trace.gz")
+    private List<String> inputFiles;
 
-  @Override
-  public void run() {
-    var stopwatch = Stopwatch.createStarted();
-    try (var output = new BufferedOutputStream(Files.newOutputStream(outputFile));
-         var events = inputFormat.readFiles(inputFiles).events();
-         var writer = outputFormat.writer(output)) {
-      writer.writeHeader();
-      var count = new MutableInt();
-      events.forEach(Failable.asConsumer(event -> {
-        writer.writeEvent(event);
-        count.increment();
-      }));
-      writer.writeFooter();
-      System.out.printf(US, "Rewrote %,d events from %,d input(s) in %s%n",
-          count.intValue(), inputFiles.size(), stopwatch);
-      System.out.printf(US, "Output in %s format to %s%n",
-          CaseFormat.UPPER_UNDERSCORE.to(CaseFormat.LOWER_HYPHEN, outputFormat.name()), outputFile);
-    } catch (IOException e) {
-      throw new UncheckedIOException(e);
+    @Option(names = "--inputFormat", required = true, description = "The default trace input format")
+    private TraceFormat inputFormat;
+
+    @Option(names = "--outputFile", required = true, description = "The trace output file")
+    private Path outputFile;
+
+    @Option(names = "--outputFormat", required = true, description = "The trace output format")
+    private OutputFormat outputFormat;
+
+    @Override
+    public void run() {
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
-  }
 
-  @SuppressWarnings("ConstantValue")
-  private static String[] argumentsWithDefaults(String[] args) {
-    var params = new ArrayList<>(Arrays.asList(args));
-    if (params.contains("--inputFormat")) {
-      return args;
+    @SuppressWarnings("ConstantValue")
+    private static String[] argumentsWithDefaults(String[] args) {
+        var params = new ArrayList<>(Arrays.asList(args));
+        if (params.contains("--inputFormat")) {
+            return args;
+        }
+        int index = params.indexOf("--inputFiles");
+        if ((index != -1) && (index < (args.length - 1))) {
+            var format = substringBefore(args[index + 1], ':');
+            if (format != null) {
+                params.addAll(List.of("--inputFormat", TraceFormat.named(format).name()));
+            }
+        }
+        return params.toArray(String[]::new);
     }
-    int index = params.indexOf("--inputFiles");
-    if ((index != -1) && (index < (args.length - 1))) {
-      var format = substringBefore(args[index + 1], ':');
-      if (format != null) {
-        params.addAll(List.of("--inputFormat", TraceFormat.named(format).name()));
-      }
-    }
-    return params.toArray(String[]::new);
-  }
 
-  static void main(String[] args) {
-    new CommandLine(Rewriter.class)
-        .setColorScheme(Help.defaultColorScheme(Help.Ansi.ON))
-        .setCommandName(Rewriter.class.getSimpleName())
-        .setCaseInsensitiveEnumValuesAllowed(true)
-        .execute(argumentsWithDefaults(args));
-  }
+    static void main(String[] args) {
+        throw new UnsupportedOperationException("STUB: not implemented");
+    }
 }
